--- a/styles.css
+++ b/styles.css
@@ -78,9 +78,11 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    padding: 1vh 1vh 3vh;
+    padding: 1vh 1vw;
     background: var(--main-color);
 }
+
+
 
 .part-name {
     font-size: 3em;
@@ -130,9 +132,28 @@ body {
 
     .container {
         flex-flow: column-reverse nowrap;
+        /* border-bottom: 2px solid var(--second-color); */
     }
 
     .inner-container {
         width: 100%;
+    }
+
+    .inner-container:last-child::after {
+        content: "";
+        border: 1px solid var(--second-color);
+        align-self: stretch;
+    }
+
+    .inner-container:first-child::before {
+        content: "";
+        border: 1px solid var(--second-color);
+        align-self: stretch;
+    } 
+}
+
+@media screen and (max-width: 575px) {
+    :root {
+        --base-font-size: 7px;
     }
 }
